--- a/index.html
+++ b/index.html
@@ -229,22 +229,22 @@ I love the spirit and the process which is adapted for different ages - from kid
                 <div class="max-w-4xl mx-auto grid md:grid-cols-2 gap-12">
                     <div class="bg-gray-800 p-8 rounded-lg">
                         <h3 class="text-2xl font-bold mb-4">Book a Class</h3>
-                        <form id="contact-form">
+                        <form id="contact-form"action="https://formsubmit.co/kereia.tetiana@gmail.com" method="POST"/>
                             <div class="mb-4">
                                 <label for="name" class="block text-gray-300 mb-2">Name</label>
-                                <input type="text" id="name" class="w-full p-2 bg-gray-700 border border-gray-600 rounded focus:outline-none focus:border-red-600" required>
+                                <input type="text" id="name" name="name" class="w-full p-2 bg-gray-700 border border-gray-600 rounded focus:outline-none focus:border-red-600" required>
                             </div>
                             <div class="mb-4">
                                 <label for="phone" class="block text-gray-300 mb-2">Phone Number</label>
-                                <input type="tel" id="phone" class="w-full p-2 bg-gray-700 border border-gray-600 rounded focus:outline-none focus:border-red-600" required>
+                                <input type="tel" id="phone" name="phone" class="w-full p-2 bg-gray-700 border border-gray-600 rounded focus:outline-none focus:border-red-600" required>
                             </div>
                             <div class="mb-4">
                                 <label for="email" class="block text-gray-300 mb-2">Email</label>
-                                <input type="email" id="email" class="w-full p-2 bg-gray-700 border border-gray-600 rounded focus:outline-none focus:border-red-600">
+                                <input type="email" id="email" name="email" class="w-full p-2 bg-gray-700 border border-gray-600 rounded focus:outline-none focus:border-red-600">
                             </div>
                             <div class="mb-4">
                                 <label for="message" class="block text-gray-300 mb-2">Message</label>
-                                <textarea id="message" rows="4" class="w-full p-2 bg-gray-700 border border-gray-600 rounded focus:outline-none focus:border-red-600" placeholder="Let us know which class you're interested in."></textarea>
+                                <textarea id="message" rows="4" name="message" class="w-full p-2 bg-gray-700 border border-gray-600 rounded focus:outline-none focus:border-red-600" placeholder="Let us know which class you're interested in."></textarea>
                             </div>
                             <button type="submit" class="cta-button w-full bg-red-600 hover:bg-red-700 text-white font-bold py-3 px-8 rounded-full uppercase transition-colors duration-300">Book Now</button>
                         </form>
