--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ I love the spirit and the process which is adapted for different ages - from kid
                 <div class="max-w-4xl mx-auto grid md:grid-cols-2 gap-12">
                     <div class="bg-gray-800 p-8 rounded-lg">
                         <h3 class="text-2xl font-bold mb-4">Book a Class</h3>
-                        <form id="contact-form" action="https://formsubmit.co/kereia.tetiana@gmail.com" method="POST">
+                        <form id="contact-form" action="https://formspree.io/f/xvgrjarz" method="POST">
                             <div class="mb-4">
                                 <label for="name" class="block text-gray-300 mb-2">Name</label>
                                 <input type="text" id="name" name="name" class="w-full p-2 bg-gray-700 border border-gray-600 rounded focus:outline-none focus:border-red-600" required>
