--- a/index.html
+++ b/index.html
@@ -377,34 +377,41 @@ document.addEventListener('DOMContentLoaded', () => {
         }
     });
 
+    document.addEventListener('DOMContentLoaded', () => {
     const contactForm = document.getElementById('contact-form');
     const confirmationModal = document.getElementById('confirmation-modal');
     const closeConfirmationModal = document.getElementById('close-confirmation-modal');
 
-contactForm.addEventListener('submit', async (e) => {
-    e.preventDefault();
+    contactForm.addEventListener('submit', async (e) => {
+        e.preventDefault();
 
-    const formData = new FormData(contactForm);
+        const formData = new FormData(contactForm);
 
-    try {
-        const response = await fetch(contactForm.action, {
-            method: 'POST',
-            body: formData,
-            headers: {
-                'Accept': 'application/json'
+        try {
+            const response = await fetch(contactForm.action, {
+                method: 'POST',
+                body: formData,
+                headers: {
+                    'Accept': 'application/json'
+                }
+            });
+
+            if (response.ok) {
+                confirmationModal.classList.remove('hidden');
+                confirmationModal.classList.add('flex');
+                contactForm.reset();
+            } else {
+                alert('ERROR. TRY LATER!');
             }
-        });
-
-        if (response.ok) {
-            confirmationModal.classList.remove('hidden');
-            confirmationModal.classList.add('flex');
-            contactForm.reset();
-        } else {
-            alert('Ошибка при отправке формы. Попробуйте позже.');
+        } catch (error) {
+            alert('Ошибка сети. Попробуйте ещё раз.');
         }
-    } catch (error) {
-        alert('Ошибка сети. Попробуйте ещё раз.');
-    }
+    });
+
+    closeConfirmationModal.addEventListener('click', () => {
+        confirmationModal.classList.add('hidden');
+        confirmationModal.classList.remove('flex');
+    });
 });
 
     const senseiThumbnailsContainer = document.getElementById('sensei-thumbnails');
