--- a/index.html
+++ b/index.html
@@ -378,59 +378,32 @@ document.addEventListener('DOMContentLoaded', () => {
     });
 
     document.addEventListener('DOMContentLoaded', () => {
-    const contactForm = document.getElementById('contact-form');
-    const confirmationModal = document.getElementById('confirmation-modal');
-    const closeConfirmationModal = document.getElementById('close-confirmation-modal');
+  const form = document.getElementById('contact-form');
+  const modal = document.getElementById('confirmation-modal');
 
-    // Regular expressions for validation
-    const nameRegex = /^[A-Za-zА-Яа-яЁёІіЇїЄєҐґ\s\-']{2,}$/;
-    const phoneRegex = /^\+?[\d\s\-\(\)]{7,20}$/;
+  form.addEventListener('submit', async (e) => {
+    console.log('Submit fired');
+    e.preventDefault();
 
-    contactForm.addEventListener('submit', async (e) => {
-        e.preventDefault();
+    try {
+      const res = await fetch(form.action, {
+        method: 'POST',
+        body: new FormData(form),
+        headers: { 'Accept': 'application/json' }
+      });
+      console.log(res.ok ? 'Sent OK' : 'Error state');
 
-        const name = contactForm.name.value.trim();
-        const phone = contactForm.phone.value.trim();
-
-        // Validate name
-        if (!nameRegex.test(name)) {
-            alert('Please enter a valid name. Only letters and spaces are allowed.');
-            return;
-        }
-
-        // Validate phone
-        if (!phoneRegex.test(phone)) {
-            alert('Please enter a valid phone number.');
-            return;
-        }
-
-        const formData = new FormData(contactForm);
-
-        try {
-            const response = await fetch(contactForm.action, {
-                method: 'POST',
-                body: formData,
-                headers: {
-                    'Accept': 'application/json'
-                }
-            });
-
-            if (response.ok) {
-                confirmationModal.classList.remove('hidden');
-                confirmationModal.classList.add('flex');
-                contactForm.reset();
-            } else {
-                alert('There was an error sending your message. Please try again later.');
-            }
-        } catch (error) {
-            alert('A network error occurred. Please check your connection and try again.');
-        }
-    });
-
-    closeConfirmationModal.addEventListener('click', () => {
-        confirmationModal.classList.add('hidden');
-        confirmationModal.classList.remove('flex');
-    });
+      if (res.ok) {
+        modal.classList.remove('hidden');
+        form.reset();
+      }
+    } catch {
+      console.log('Fetch error');
+    }
+  });
+  document.getElementById('close-confirmation-modal').addEventListener('click', () => {
+    modal.classList.add('hidden');
+  });
 });
 
     const senseiThumbnailsContainer = document.getElementById('sensei-thumbnails');
