--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@ I love the spirit and the process which is adapted for different ages - from kid
 <script>
 document.addEventListener('DOMContentLoaded', () => {
     const classData = [
-        { id: 'all', name: 'All Grades', schedule: 'Mondays & Fridays: 6:20 PM - 7:10 PM', description: 'Covering the 3 fundamental aspects of Karate training – basics (kihon), forms (kata), and sparring (kumite). Perfect for beginners and all levels.' },
-        { id: 'kumite', name: 'Kumite', schedule: 'Mondays & Fridays: 7:10 PM - 7:40 PM', description: 'Open to all students interested in improving their fitness and practical fighting skills for self-defense.' },
-        { id: 'kids', name: 'Kids Karate', schedule: 'Mondays & Fridays: 5:30 PM - 6:15 PM', description: 'For ages 7-12. A fun, disciplined environment for children to build confidence, focus, and fundamental karate skills.' },
+        { id: 'all', name: 'All Grades', schedule: 'Mondays & Thursdays: evening', description: 'Covering the 3 fundamental aspects of Karate training – basics (kihon), forms (kata), and sparring (kumite). Perfect for beginners and all levels.' },
+        { id: 'kumite', name: 'Kumite', schedule: '', description: 'Open to all students interested in improving their fitness and practical fighting skills for self-defense.' },
+        { id: 'kids', name: 'Kids Karate', schedule: 'Thursdays: evening', description: 'For ages 6-12. A fun, disciplined environment for children to build confidence, focus, and fundamental karate skills.' },
         { id: 'competitions', name: 'Competitions', schedule: 'Specialized Sessions', description: 'For those who wish to test their skills, we offer dedicated preparation for national and international competitions. Our students are already achieving success on the competitive circuit.' },
         { id: 'camps', name: 'Camps', schedule: 'Announced Seasonally', description: 'We host and travel to intensive training camps, providing opportunities to learn directly from world-renowned Shihans and Senseis.' }
     ];
