--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                     <div id="sensei-slider">
-                        <img id="main-sensei-photo" src="images/sensei1.jpg" alt="Head Instructor" class="w-full h-[80vh] object-cover rounded-lg mb-4 border-2 border-gray-700">
+                        <img id="main-sensei-photo" src="images/sensei1.jpg" alt="Head Instructor" h-[60vh] sm:h-[70vh] md:h-[80vh] lg:h-[85vh] xl:h-[90vh] object-cover object-top rounded-lg mb-4 border-2 border-gray-700">
                         <div id="sensei-thumbnails" class="grid grid-cols-4 gap-2">
                         </div>
                     </div>
