--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
             transform: translateY(0);
         }
     </style>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y2C8FTXNS9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-Y2C8FTXNS9');
+  </script>
 </head>
 <body class="bg-black">
 
