--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                      <h3 class="text-2xl font-bold text-center text-red-600 mb-8">Competition History</h3>
                      <div class="grid grid-cols-2 md:grid-cols-4 gap-8 text-center">
                         <div>
-                            <p class="text-4xl font-bold text-white"><i class="fas fa-trophy text-yellow-400"></i> 10x</p>
+                            <p class="text-4xl font-bold text-white"><i class="fas fa-trophy text-yellow-400"></i> 11x</p>
                             <p class="text-gray-400 uppercase text-sm mt-2">1st Place Finishes</p>
                             <p class="text-xs text-gray-500">(Hungarian, Scottish, German, Balkan, Spanish Championships)</p>
                         </div>
@@ -393,7 +393,7 @@ const closeConfirmationModal = document.getElementById('close-confirmation-modal
 const nameRegex = /^[A-Za-z\s\-']{2,}$/;
 const phoneRegex = /^\+[\d\s\-\(\)]{10,20}$/;
 
-const formspreeURL = 'https://formspree.io/f/xvgrjarz';
+const formspreeURL = 'https://formspree.io/f/manbyabq';
 const SUBMIT_KEY = 'form_last_submitted';
 const cooldownMs = 24 * 60 * 60 * 1000;
 
