--- a/index.html
+++ b/index.html
@@ -169,15 +169,47 @@
         </section>
 
         <section id="why" class="py-20 bg-gray-900">
-            <div class="container mx-auto px-6 text-center">
-                <div class="animate-on-scroll fade-in">
-                    <h2 class="text-4xl font-bold uppercase mb-12">The Kyokushin Way</h2>
-                    <p class="max-w-3xl mx-auto text-gray-300">
-                        Kyokushin karate, founded in 1964 by Masutatsu Oyama, is more than a fighting style; it is a way of life. Known as "The Strongest Karate," its philosophy emphasizes rigorous training, self-discipline, and the pursuit of ultimate truth. We embrace this tradition, teaching karate not just as a method of self-defense, but as a path to developing character, respect, and an indomitable spirit. Our dojo is a place to connect with centuries of martial arts heritage.
-                    </p>
-                </div>
+    <div class="container mx-auto px-6">
+        <div class="flex flex-col md:flex-row items-center md:items-start gap-10 animate-on-scroll fade-in">
+            <!-- Image Left -->
+            <div class="w-full md:w-1/2">
+                <img src="images/masutatsu-oyama.jpg" alt="Sosai Masutatsu Oyama" class="rounded-lg shadow-lg w-full object-cover">
+                <p class="text-sm text-gray-400 text-center mt-2">Sosai Masutatsu Oyama — Founder of Kyokushin</p>
             </div>
-        </section>
+
+            <!-- Text Right -->
+            <div class="w-full md:w-1/2 text-center md:text-left">
+                <h2 class="text-4xl font-bold uppercase mb-8">The Kyokushin Way</h2>
+                <p class="text-gray-300 mb-6">
+                    Kyokushin Karate, founded in 1964 by <strong>Sosai Masutatsu Oyama</strong>, is more than a fighting style; it is a way of life. Known as “The Strongest Karate,” its philosophy emphasizes rigorous training, self-discipline, and the pursuit of ultimate truth.
+                </p>
+                <p class="text-gray-300 mb-6">
+                    <strong>Sosai</strong> (a title meaning "Founder") Oyama was a martial arts visionary, renowned for his strength, discipline, and determination. His legacy lives on through dojos around the world, where his teachings continue to inspire generations of practitioners.
+                </p>
+                <p class="text-gray-300">
+                    We embrace this tradition, teaching karate not just as a method of self-defense, but as a path to developing character, respect, and an indomitable spirit. Our dojo is a place to connect with centuries of martial arts heritage.
+                </p>
+            </div>
+        </div>
+
+        <!-- Principles Section -->
+        <div class="mt-16 text-gray-300 animate-on-scroll fade-in">
+            <h3 class="text-3xl font-semibold text-center mb-8 uppercase">Kyokushin Dojo Kun</h3>
+            <ul class="max-w-4xl mx-auto space-y-4 list-decimal list-inside text-lg leading-relaxed">
+                <li>We will train our hearts and bodies for a firm unshaken spirit.</li>
+                <li>We will pursue the true meaning of the martial way, so that in time our senses may be alert.</li>
+                <li>With true vigor, we will seek to cultivate a spirit of self-denial.</li>
+                <li>We will observe the rules of courtesy, respect our superiors, and refrain from violence.</li>
+                <li>We will follow our religious principles, and never forget the true virtue of humility.</li>
+                <li>We will look upwards to wisdom and strength, not seeking other desires.</li>
+                <li>All our lives, through the discipline of Karate, we will seek to fulfill the true meaning of the Kyokushin Way.</li>
+                <li>We will not forget the true virtue of humility.</li>
+                <li>We will always be aware of our strength and use it wisely.</li>
+                <li>We will constantly strive to improve ourselves and serve society.</li>
+            </ul>
+        </div>
+    </div>
+</section>
 
         <section id="gallery" class="py-20">
             <div class="container mx-auto px-6 text-center animate-on-scroll fade-in">
