--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div class="flex flex-col md:flex-row items-center md:items-start gap-10 animate-on-scroll fade-in">
             <!-- Image Left -->
             <div class="w-full md:w-1/2">
-                <img src="images/masutatsu-oyama.jpg" alt="Sosai Masutatsu Oyama" class="rounded-lg shadow-lg w-full object-cover">
+                <img src="images/sosai2.webp" alt="Sosai Masutatsu Oyama" class="rounded-lg shadow-lg w-full object-cover">
                 <p class="text-sm text-gray-400 text-center mt-2">Sosai Masutatsu Oyama — Founder of Kyokushin</p>
             </div>
 
