--- a/index.html
+++ b/index.html
@@ -198,14 +198,11 @@
             <ul class="max-w-4xl mx-auto space-y-4 list-decimal list-inside text-lg leading-relaxed">
                 <li>We will train our hearts and bodies for a firm unshaken spirit.</li>
                 <li>We will pursue the true meaning of the martial way, so that in time our senses may be alert.</li>
-                <li>With true vigor, we will seek to cultivate a spirit of self-denial.</li>
+                <li>With true vigour, we will seek to cultivate a spirit of self-denial.</li>
                 <li>We will observe the rules of courtesy, respect our superiors, and refrain from violence.</li>
                 <li>We will follow our religious principles, and never forget the true virtue of humility.</li>
                 <li>We will look upwards to wisdom and strength, not seeking other desires.</li>
                 <li>All our lives, through the discipline of Karate, we will seek to fulfill the true meaning of the Kyokushin Way.</li>
-                <li>We will not forget the true virtue of humility.</li>
-                <li>We will always be aware of our strength and use it wisely.</li>
-                <li>We will constantly strive to improve ourselves and serve society.</li>
             </ul>
         </div>
     </div>
