--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real Kyokushin Edinburgh Dojo</title>
+    <title>Real Kyokushin Karate Edinburgh | Martial Arts Classes in Edinburgh</title>
+    <meta name="description" content="Discover Kyokushin Karate and Martial Arts in Corstorphine, Edinburgh. Train with Sensei Andras Grof – strength, confidence and discipline for kids, teens & adults." />
+    <meta name="keywords" content="Kyokushin Edinburgh, Karate Edinburgh, Martial Arts Edinburgh, Karate classes Edinburgh, Karate dojo Edinburgh, Karate for kids Edinburgh, Martial arts for children Edinburgh, Karate training Edinburgh, Kyokushin Karate Scotland, Self-defense classes Edinburgh, Karate for adults Edinburgh, Martial arts Corstorphine, Karate lessons Edinburgh" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
