--- a/index.html
+++ b/index.html
@@ -378,6 +378,8 @@ document.addEventListener('DOMContentLoaded', () => {
 
     const galleryGrid = document.getElementById('gallery-grid');
     const galleryImages = [
+        'images/IMG_3063.jpg',
+        'images/IMG_3095.jpg',
         'images/IMG_3185.jpg',
         'images/IMG_3245.jpg',
         'images/IMG_3797.jpg',
