--- a/index.html
+++ b/index.html
@@ -384,6 +384,13 @@ document.addEventListener('DOMContentLoaded', () => {
         'images/IMG_3245.jpg',
         'images/IMG_3797.jpg',
         'images/IMG_4897.jpg'
+        'images/IMG_3075.jpg',
+        'images/IMG_2982.jpg',
+        'images/IMG_3350.jpg',
+        'images/IMG_3099.jpg',
+        'images/IMG_3119.jpg',
+        'images/IMG_3080.jpg',
+        'images/IMG_3181.jpg'
     ];
     
     galleryImages.forEach(src => {
