--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ document.addEventListener('DOMContentLoaded', () => {
         'images/IMG_3185.jpg',
         'images/IMG_3245.jpg',
         'images/IMG_3797.jpg',
-        'images/IMG_4897.jpg'
+        'images/IMG_4897.jpg',
         'images/IMG_3075.jpg',
         'images/IMG_2982.jpg',
         'images/IMG_3350.jpg',
